Repalce mat-button por mat-stroked-button

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
     </span>
   </button>
 
-  <button mat-button [mat-menu-trigger-for]="profile" aria-label="Perfil de usuario">
+  <button mat-stroked-button [mat-menu-trigger-for]="profile" aria-label="Perfil de usuario">
     {{ userName }}
   </button>
   <mat-menu #profile="matMenu">
