--- a/src/app/pages/accounts/recovery-password-change/recovery-password-change.component.html
+++ b/src/app/pages/accounts/recovery-password-change/recovery-password-change.component.html
@@ -42,7 +42,9 @@
 
         <mat-card-footer>
           <aw-btn-loading [loading]="loading" btnText="Restablecer contraseña" />
-          <button mat-button type="button" class="ms-2" [routerLink]="[siteUrl.auth.login]">Identificarse</button>
+          <button mat-stroked-button type="button" class="ms-2" [routerLink]="[siteUrl.auth.login]">
+            Identificarse
+          </button>
         </mat-card-footer>
       </mat-card>
     </form>
