--- a/src/app/pages/accounts/recovery-password/recovery-password.component.html
+++ b/src/app/pages/accounts/recovery-password/recovery-password.component.html
@@ -32,7 +32,9 @@
 
         <mat-card-footer class="mt-2">
           <aw-btn-loading [loading]="loading" btnText="Recuperar contraseña" />
-          <button [routerLink]="[siteUrl.auth.login]" class="ms-2" mat-button type="button">Identificarse</button>
+          <button [routerLink]="[siteUrl.auth.login]" class="ms-2" mat-stroked-button type="button">
+            Identificarse
+          </button>
         </mat-card-footer>
       </mat-card>
     </form>
