--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -41,7 +41,7 @@
 
         <mat-card-footer class="mt-2">
           <aw-btn-loading [loading]="loading" btnText="Identificar" />
-          <button mat-button class="ms-2" type="button" [routerLink]="[siteUrl.accounts.recoveryPassword]">
+          <button mat-stroked-button class="ms-2" type="button" [routerLink]="[siteUrl.accounts.recoveryPassword]">
             ¿Olvidaste contraseña?
           </button>
         </mat-card-footer>
