--- a/src/app/pages/company-calendar/company-calendar-header-links/company-calendar-header-links.component.html
+++ b/src/app/pages/company-calendar/company-calendar-header-links/company-calendar-header-links.component.html
@@ -1,1 +1,4 @@
-<p>company-calendar-header-links works!</p>,
+<button mat-stroked-button color="primary" class="me-2" [routerLink]="siteUrl.companyCalendar.list">
+  Administrar calendarios
+</button>
+<button mat-stroked-button color="primary" [routerLink]="siteUrl.employees.list">Asignar calendario</button>
