--- a/src/app/pages/company-settings/company-settings-details/company-settings-details.component.html
+++ b/src/app/pages/company-settings/company-settings-details/company-settings-details.component.html
@@ -4,7 +4,7 @@
   <mat-card>
     <mat-card-content>
       <!-- toolbar-->
-      <button [routerLink]="[siteUrl.companySettings.update]" color="primary" mat-button>
+      <button [routerLink]="[siteUrl.companySettings.update]" color="primary" mat-stroked-button>
         <mat-icon>edit</mat-icon>
         Editar
       </button>
