--- a/src/app/pages/company-tasks/company-task-view/company-task-users/company-task-users.component.html
+++ b/src/app/pages/company-tasks/company-task-view/company-task-users/company-task-users.component.html
@@ -1,7 +1,9 @@
 <!-- tab user-list -->
 @if (tabSelected() === "user-list") {
   <div class="d-flex mt-4">
-    <button mat-button color="primary" (click)="toggleTabSelected()"><mat-icon>add</mat-icon> Asociar empleados</button>
+    <button mat-stroked-button color="primary" (click)="toggleTabSelected()">
+      <mat-icon>add</mat-icon> Asociar empleados
+    </button>
   </div>
 
   <aw-company-task-user-list />
