--- a/src/app/pages/employee-calendar/employee-calendar-toolbar/employee-calendar-toolbar.component.html
+++ b/src/app/pages/employee-calendar/employee-calendar-toolbar/employee-calendar-toolbar.component.html
@@ -1,7 +1,7 @@
 <div class="employee-calendar-toolbar">
   <div class="d-flex justify-content-start">
     <h1>Reclamar días de vacaciones</h1>
-    <button mat-button color="warn" class="ms-auto" (click)="handleCloseToolbar()">
+    <button mat-stroked-button color="warn" class="ms-auto" (click)="handleCloseToolbar()">
       <mat-icon>close</mat-icon>
     </button>
   </div>
