--- a/src/app/pages/employees/employee-list/employee-list.component.html
+++ b/src/app/pages/employees/employee-list/employee-list.component.html
@@ -5,7 +5,7 @@
     <mat-card-content>
       <!-- toolbar -->
       <div class="d-flex flex-row">
-        <button [routerLink]="siteUrl.employees.invite" color="primary" mat-button>
+        <button [routerLink]="siteUrl.employees.invite" color="primary" mat-stroked-button>
           <mat-icon>add</mat-icon>
           Invitar empleado
         </button>
