--- a/src/app/pages/time-control-records/time-control-record-create/time-control-record-create.component.html
+++ b/src/app/pages/time-control-records/time-control-record-create/time-control-record-create.component.html
@@ -15,7 +15,7 @@
     <mat-card>
       <mat-card-content>
         <div class="d-flex justify-content-center">
-          <button mat-button color="primary" (click)="handleSelectEmployee()" class="btn btn-outline-primary">
+          <button mat-stroked-button color="primary" (click)="handleSelectEmployee()" class="btn btn-outline-primary">
             Seleccionar empleado
           </button>
         </div>
