--- a/src/app/pages/time-control-records/time-control-record-details/time-control-record-details.component.html
+++ b/src/app/pages/time-control-records/time-control-record-details/time-control-record-details.component.html
@@ -25,7 +25,7 @@
               <td>Empleado</td>
               <td>
                 <button
-                  mat-button
+                  mat-stroked-button
                   color="primary"
                   class="cursor-pointer"
                   (click)="handleNavigateToEmployee(timeControl.userId)">
