--- a/src/app/pages/category-absences/category-absence-list/category-absence-list.component.html
+++ b/src/app/pages/category-absences/category-absence-list/category-absence-list.component.html
@@ -5,7 +5,7 @@
     <mat-card-content>
       <!-- toolbar -->
       <div class="d-flex flex-row">
-        <button mat-button color="primary" [routerLink]="siteUrl.categoryAbsences.create">
+        <button mat-stroked-button color="primary" [routerLink]="siteUrl.categoryAbsences.create">
           <mat-icon>add</mat-icon> Crear ausencia
         </button>
         <div class="ms-auto">
@@ -55,7 +55,7 @@
             <th mat-header-cell *matHeaderCellDef class="d-flex justify-content-end">&nbsp;</th>
             <td mat-cell *matCellDef="let row">
               <span class="d-flex justify-content-end">
-                <button mat-button (click)="handleButtonUpdate(row)" color="primary">
+                <button mat-stroked-button (click)="handleButtonUpdate(row)" color="primary">
                   <mat-icon>edit</mat-icon>
                 </button>
               </span>
