--- a/src/app/pages/company-tasks/company-task-list/company-task-list.component.html
+++ b/src/app/pages/company-tasks/company-task-list/company-task-list.component.html
@@ -5,7 +5,7 @@
     <mat-card-content>
       <!-- toolbar -->
       <div class="d-flex flex-row">
-        <button mat-button color="primary" [routerLink]="siteUrl.companyTasks.create">
+        <button mat-stroked-button color="primary" [routerLink]="siteUrl.companyTasks.create">
           <mat-icon>add</mat-icon> Crear tarea
         </button>
         <div class="ms-auto">
