--- a/src/app/pages/departments/department-list/department-list.component.html
+++ b/src/app/pages/departments/department-list/department-list.component.html
@@ -5,7 +5,7 @@
     <mat-card-content>
       <!-- toolbar -->
       <div class="d-flex flex-row">
-        <button mat-button color="primary" [routerLink]="siteUrl.departments.create">
+        <button mat-stroked-button color="primary" [routerLink]="siteUrl.departments.create">
           <mat-icon>add</mat-icon> Crear departamento
         </button>
         <div class="ms-auto">
