--- a/src/app/pages/departments/department-view/department-users/department-users.component.html
+++ b/src/app/pages/departments/department-view/department-users/department-users.component.html
@@ -1,7 +1,7 @@
 <!-- tab user-list -->
 @if (tabSelected() === "user-list") {
   <div class="d-flex mt-4">
-    <button mat-button color="primary" (click)="toggleTabSelected()">
+    <button mat-stroked-button color="primary" (click)="toggleTabSelected()">
       <mat-icon>add</mat-icon>
       Asociar empleados
     </button>
