--- a/src/app/pages/manage-holidays/holidays-assigned/holidays-assigned.component.html
+++ b/src/app/pages/manage-holidays/holidays-assigned/holidays-assigned.component.html
@@ -7,7 +7,7 @@
       <!-- toolbar -->
       <div class="d-flex flex-wrap justify-content-between">
         <!-- button -->
-        <button mat-button color="primary" [routerLink]="siteUrl.manageHolidays.assign">
+        <button mat-stroked-button color="primary" [routerLink]="siteUrl.manageHolidays.assign">
           <mat-icon>add</mat-icon> Asignar días festivos para el año {{ yearSelected.year }}
         </button>
 
