--- a/src/app/pages/company-calendar/company-calendars-view/company-calendar-list/company-calendar-list.component.html
+++ b/src/app/pages/company-calendar/company-calendars-view/company-calendar-list/company-calendar-list.component.html
@@ -1,1 +1,48 @@
-<p>company-calendar-list works!</p>,
+<aw-page-base>
+  <aw-page-header [breadcrumb]="breadcrumb">Lista de calendarios</aw-page-header>
+
+  <mat-card>
+    <mat-card-content>
+      <!-- toolbar -->
+      <div class="d-flex flex-row">
+        <button mat-stroked-button color="primary"><mat-icon>add</mat-icon> Crear calendario</button>
+      </div>
+
+      @if (!loading) {
+        <table mat-table matSort (matSortChange)="handleSortChange()" [dataSource]="dataSource">
+          <!-- name -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
+            <td mat-cell *matCellDef="let row">
+              <span [ngClass]="{ 'text-success': row.default }">
+                {{ row.name }}
+              </span>
+            </td>
+          </ng-container>
+
+          <!-- description -->
+          <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Descripción</th>
+            <td mat-cell *matCellDef="let row">
+              <span [ngClass]="{ 'text-success': row.default }">
+                {{ row.description }}
+              </span>
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="handleSelectRow(row)"></tr>
+
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell p-4" [attr.colspan]="displayedColumns.length">No hay datos a mostrar</td>
+          </tr>
+        </table>
+      } @else {
+        <!-- spinner -->
+        <div class="d-flex justify-content-center p-5">
+          <mat-progress-spinner color="primary" mode="indeterminate" />
+        </div>
+      }
+    </mat-card-content>
+  </mat-card>
+</aw-page-base>
