--- a/src/app/pages/company-calendar/company-calendars-view/company-calendar-list/company-calendar-list.component.html
+++ b/src/app/pages/company-calendar/company-calendars-view/company-calendar-list/company-calendar-list.component.html
@@ -30,6 +30,16 @@
             </td>
           </ng-container>
 
+          <!-- default -->
+          <ng-container matColumnDef="default">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Principal</th>
+            <td mat-cell *matCellDef="let row">
+              @if (row.default) {
+                <mat-icon class="text-success">check_circle</mat-icon>
+              }
+            </td>
+          </ng-container>
+
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="handleSelectRow(row)"></tr>
 
@@ -43,6 +53,10 @@
           <mat-progress-spinner color="primary" mode="indeterminate" />
         </div>
       }
+
+      <mat-divider class="mb-2" />
+
+      <aw-btn-back />
     </mat-card-content>
   </mat-card>
 </aw-page-base>
