--- a/src/app/pages/employees/employee-view/employee-details/employee-roles-edit/employee-roles-edit.component.html
+++ b/src/app/pages/employees/employee-view/employee-details/employee-roles-edit/employee-roles-edit.component.html
@@ -1,5 +1,6 @@
 <h2 mat-dialog-title>
   Roles - <small>{{ fullName }}</small>
+
   <mat-divider />
 </h2>
 
@@ -42,6 +43,8 @@
     </mat-slide-toggle>
   </div>
 </mat-dialog-content>
+
+<mat-divider />
 
 <mat-dialog-actions align="end">
   <button class="me-2" color="accent" mat-dialog-close mat-flat-button>
