Implementado company-calendar-create y company-calendar-update

--- a/src/app/components/buttons/btn-loading/btn-loading.component.html
+++ b/src/app/components/buttons/btn-loading/btn-loading.component.html
@@ -1,11 +1,5 @@
 @if (loading()) {
-  <button
-    mat-flat-button
-    (click)="handleClick()"
-    [ngClass]="extraCss()"
-    [color]="color()"
-    [type]="btnType()"
-    [disabled]="disabled()">
+  <button mat-flat-button disabled (click)="handleClick()" [ngClass]="extraCss()" [color]="color()" [type]="btnType()">
     <mat-spinner [color]="spinnerColor()" [diameter]="25"></mat-spinner> {{ btnTextLoading() }}
   </button>
 } @else {
