--- a/src/app/pages/company-calendar/company-calendars-view/company-calendar-details/company-calendar-details.component.html
+++ b/src/app/pages/company-calendar/company-calendars-view/company-calendar-details/company-calendar-details.component.html
@@ -40,7 +40,7 @@
       <mat-divider class="mb-2" />
 
       <aw-btn-back class="me-2" />
-      <button mat-flat-button color="primary"><mat-icon>edit</mat-icon> Editar</button>
+      <button mat-flat-button color="primary" (click)="handleClickUpdate()"><mat-icon>edit</mat-icon> Editar</button>
     </mat-card-content>
   </mat-card>
 </aw-page-base>
