--- a/src/app/pages/company-calendar/company-calendars-view/company-calendar-list/company-calendar-list.component.html
+++ b/src/app/pages/company-calendar/company-calendars-view/company-calendar-list/company-calendar-list.component.html
@@ -5,7 +5,9 @@
     <mat-card-content>
       <!-- toolbar -->
       <div class="d-flex flex-row">
-        <button mat-stroked-button color="primary"><mat-icon>add</mat-icon> Crear calendario</button>
+        <button mat-stroked-button color="primary" [routerLink]="siteUrl.companyCalendar.create">
+          <mat-icon>add</mat-icon> Crear calendario
+        </button>
       </div>
 
       @if (!loading) {
