--- a/src/app/pages/employees/employee-view/employee-view.component.html
+++ b/src/app/pages/employees/employee-view/employee-view.component.html
@@ -10,15 +10,21 @@
       <mat-card-content>
         <mat-tab-group>
           <mat-tab label="Control de tiempos">
-            <aw-employee-time-control-progress />
+            <ng-template matTabContent>
+              <aw-employee-time-control-progress />
+            </ng-template>
           </mat-tab>
 
           <mat-tab label="Departamentos">
-            <aw-employee-departments />
+            <ng-template matTabContent>
+              <aw-employee-departments />
+            </ng-template>
           </mat-tab>
 
           <mat-tab label="Tareas">
-            <aw-employee-tasks />
+            <ng-template matTabContent>
+              <aw-employee-tasks />
+            </ng-template>
           </mat-tab>
         </mat-tab-group>
       </mat-card-content>
