Revision diseño iconos en tablas

--- a/src/app/components/sidenav/sidenav-menu/sidenav-menu.component.html
+++ b/src/app/components/sidenav/sidenav-menu/sidenav-menu.component.html
@@ -7,7 +7,7 @@
     [awRequiredRole]="role.Admin"
     [expanded]="stateSidebarMenu('administration')">
     <mat-expansion-panel-header>
-      <mat-panel-title><mat-icon>settings</mat-icon> Administración</mat-panel-title>
+      <mat-panel-title><mat-icon>settings</mat-icon> &nbsp; Administración</mat-panel-title>
     </mat-expansion-panel-header>
 
     <mat-nav-list>
@@ -23,7 +23,7 @@
     [awRequiredRole]="role.HumanResources"
     [expanded]="stateSidebarMenu('enterprise')">
     <mat-expansion-panel-header>
-      <mat-panel-title><mat-icon>view_list</mat-icon> Empresa</mat-panel-title>
+      <mat-panel-title><mat-icon>view_list</mat-icon> &nbsp; Empresa</mat-panel-title>
     </mat-expansion-panel-header>
 
     <mat-nav-list>
@@ -53,7 +53,7 @@
     [awRequiredRole]="role.HumanResources"
     [expanded]="stateSidebarMenu('calendar')">
     <mat-expansion-panel-header>
-      <mat-panel-title><mat-icon>calendar_month</mat-icon> Calendario</mat-panel-title>
+      <mat-panel-title><mat-icon>calendar_month</mat-icon> &nbsp; Calendario</mat-panel-title>
     </mat-expansion-panel-header>
 
     <mat-nav-list>
@@ -70,7 +70,7 @@
     [awRequiredRole]="role.Employee"
     [expanded]="stateSidebarMenu('employee')">
     <mat-expansion-panel-header>
-      <mat-panel-title><mat-icon>person</mat-icon> Empleado</mat-panel-title>
+      <mat-panel-title><mat-icon>person</mat-icon> &nbsp; Empleado</mat-panel-title>
     </mat-expansion-panel-header>
 
     <mat-nav-list [awRequiredRole]="role.Employee">
