--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -80,11 +80,11 @@ a {
 }
 
 /***********************
- * ICONS.
+ *
  */
 
-.material-symbols-outlined,
-.material-icons {
+/** Centrar elementos verticalmente. */
+.align-center {
   display: inline-flex;
   vertical-align: middle;
   align-items: center;
