--- a/src/app/pages/category-absences/category-absence-list/category-absence-list.component.html
+++ b/src/app/pages/category-absences/category-absence-list/category-absence-list.component.html
@@ -52,10 +52,10 @@
 
           <!-- actions -->
           <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef class="d-flex justify-content-end">&nbsp;</th>
+            <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
             <td mat-cell *matCellDef="let row">
               <span class="d-flex justify-content-end">
-                <button mat-stroked-button (click)="handleButtonUpdate(row)" color="primary">
+                <button mat-icon-button color="primary" (click)="handleButtonUpdate(row)">
                   <mat-icon>edit</mat-icon>
                 </button>
               </span>
