--- a/src/app/pages/times-control-progress/times-control-progress.component.html
+++ b/src/app/pages/times-control-progress/times-control-progress.component.html
@@ -5,7 +5,9 @@
   <mat-card>
     <mat-card-content>
       @if (companyGeolocationRequired && !geolocationIsAvailable()) {
-        <div class="alert alert-danger">La empresa requiere que acepte permisos de ubicación desde el navegador</div>
+        <div class="alert alert-danger mb-4">
+          La empresa requiere que acepte permisos de ubicación desde el navegador
+        </div>
       }
 
       <div class="d-flex justify-content-center">
