--- a/src/app/pages/company-holidays/employee-holidays/employee-holidays.component.html
+++ b/src/app/pages/company-holidays/employee-holidays/employee-holidays.component.html
@@ -1,16 +1,17 @@
 <aw-page-base>
-  <aw-page-header [breadcrumb]="breadcrumb">Días de vacaciones</aw-page-header>
+  <aw-page-header [breadcrumb]="breadcrumb">
+    Días de vacaciones
+
+    <div class="header-links">
+      <aw-company-holiday-headers />
+    </div>
+  </aw-page-header>
 
   <mat-card>
     <!-- content -->
     <mat-card-content>
       <!-- toolbar -->
       <div class="d-flex flex-wrap justify-content-between">
-        <!-- button -->
-        <button mat-stroked-button color="primary" [routerLink]="siteUrl.manageHolidays.assign">
-          <mat-icon>add</mat-icon> Asignar días festivos para el año {{ yearSelected.year }}
-        </button>
-
         <!-- year selector -->
         <aw-year-selector
           (changeYearSelected)="handleYearSelectorChange($event)"
@@ -42,25 +43,41 @@
           <!-- email -->
           <ng-container matColumnDef="email">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Correo electrónico</th>
-            <td mat-cell *matCellDef="let row">{{ row.lastName }}</td>
+            <td mat-cell *matCellDef="let row">{{ row.email }}</td>
           </ng-container>
 
           <!-- totalDays -->
           <ng-container matColumnDef="totalDays">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Días totales</th>
-            <td mat-cell *matCellDef="let row">{{ row.totalDays }}</td>
+            <th mat-header-cell *matHeaderCellDef>Días totales</th>
+            <td mat-cell *matCellDef="let row">
+              <span class="text-success">
+                {{ row.totalDays }}
+              </span>
+            </td>
           </ng-container>
 
           <!-- consumed -->
           <ng-container matColumnDef="consumed">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Utilizados</th>
-            <td mat-cell *matCellDef="let row">{{ row.consumed }}</td>
+            <th mat-header-cell *matHeaderCellDef>Utilizados</th>
+            <td mat-cell *matCellDef="let row">
+              <span
+                [ngClass]="{
+                  'text-success': row.totalDays > row.consumed,
+                  'text-danger': row.totalDays === row.consumed
+                }">
+                {{ row.consumed }}
+              </span>
+            </td>
           </ng-container>
 
           <!-- remaining -->
           <ng-container matColumnDef="remaining">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Restantes</th>
-            <td mat-cell *matCellDef="let row">{{ row.totalDays - row.consumed }}</td>
+            <th mat-header-cell *matHeaderCellDef>Restantes</th>
+            <td mat-cell *matCellDef="let row">
+              <span [ngClass]="{ 'text-success': row.remaining > 0, 'text-danger': row.remaining <= 0 }">
+                {{ row.remaining }}
+              </span>
+            </td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -88,6 +105,7 @@
           <mat-progress-spinner color="primary" mode="indeterminate" />
         </div>
       }
+      <span class="small">Solo se muestran los empleados activos.</span>
     </mat-card-content>
   </mat-card>
 </aw-page-base>
