Obtener hoidays de un empleado concreto

--- a/src/app/pages/company-calendar/company-calendars-view/company-calendar-details/company-calendar-details.component.html
+++ b/src/app/pages/company-calendar/company-calendars-view/company-calendar-details/company-calendar-details.component.html
@@ -20,7 +20,7 @@
                 @if (companyCalendar.default) {
                   <mat-icon class="text-success">check_circle</mat-icon>
                 } @else {
-                  <mat-icon class="text-danger me-2">cancel</mat-icon>
+                  <mat-icon class="text-danger me-2 align-center">cancel</mat-icon>
                   <button mat-stroked-button color="primary" (click)="handleSetDefaultCalendar()">
                     Establecer por defecto
                   </button>
