--- a/src/app/pages/company-holidays/employee-holidays-claims/employee-holidays-claims.component.html
+++ b/src/app/pages/company-holidays/employee-holidays-claims/employee-holidays-claims.component.html
@@ -1,9 +1,9 @@
 <aw-page-base>
   <aw-page-header [breadcrumb]="breadcrumb">
-    Días de vacaciones pendientes
+    Reclamos de vacaciones
 
     <div class="header-links">
-      <aw-company-holiday-headers />
+      <aw-company-holidays-headers />
     </div>
   </aw-page-header>
 </aw-page-base>
