--- a/src/app/pages/times-control-progress/times-control-progress.component.html
+++ b/src/app/pages/times-control-progress/times-control-progress.component.html
@@ -4,7 +4,7 @@
   <!-- toolbar -->
   <mat-card>
     <mat-card-content>
-      @if (companyGeolocationRequired && !geolocationIsAvailable()) {
+      @if (!loadingTimeControls && companyGeolocationRequired && !geolocationIsAvailable()) {
         <div class="alert alert-danger mb-4">
           La empresa requiere que acepte permisos de ubicación desde el navegador
         </div>
