--- a/src/app/components/sidenav/sidenav-menu/sidenav-menu.component.html
+++ b/src/app/components/sidenav/sidenav-menu/sidenav-menu.component.html
@@ -37,7 +37,7 @@
       <mat-list-item [routerLink]="siteUrl.timeControlRecords.list">
         <div class="d-flex justify-content-start">
           Registro de tiempos
-          <mat-chip [highlighted]="timeControlIncidencesCount() > 0" color="warn" class="ms-auto">
+          <mat-chip [highlighted]="timeControlIncidencesCount() > 0" color="warn" class="ms-auto small-chip">
             {{ timeControlIncidencesCount() }}
           </mat-chip>
         </div>
