--- a/src/app/pages/company-holidays/employee-holidays-details/employee-holidays-details.component.html
+++ b/src/app/pages/company-holidays/employee-holidays-details/employee-holidays-details.component.html
@@ -1,3 +1,9 @@
 <aw-page-base>
-  <aw-page-header>Detalles</aw-page-header>
+  @if (employee) {
+    <aw-page-header [breadcrumb]="breadcrumb">Detalles {{ employee.firstName }}</aw-page-header>
+  }
+
+  <mat-card>
+    <mat-card-content> </mat-card-content>
+  </mat-card>
 </aw-page-base>
