Revisado pages accounts

--- a/src/app/pages/accounts/recovery-password/recovery-password.component.html
+++ b/src/app/pages/accounts/recovery-password/recovery-password.component.html
@@ -9,9 +9,10 @@
         </mat-card-header>
 
         <mat-card-content>
-          @if (messageResponse) {
-            <div class="alert alert-success mb-2">
-              Se ha enviado un correo para restablecer la contraseña. Siga las indicaciones desde su correo.
+          @if (isSucceeded) {
+            <div class="alert alert-success mb-4">
+              Se ha enviado un correo para restablecer la contraseña. <br />
+              Siga las indicaciones desde su correo.
             </div>
           }
 
