--- a/src/app/pages/accounts/restore-password/restore-password.component.html
+++ b/src/app/pages/accounts/restore-password/restore-password.component.html
@@ -4,13 +4,15 @@
       <mat-card class="mat-elevation-z3 p-4">
         <mat-card-header>
           <mat-card-title class="title">
-            <h1>Recuperar contraseña</h1>
+            <h1>Restablecer contraseña</h1>
           </mat-card-title>
         </mat-card-header>
 
         <mat-card-content>
-          @if (errorMessages.length === 0) {
-            <div class="alert alert-success mb-2">Se ha producido un error al restablecer la contraseña.</div>
+          @if (!hasRequiredData) {
+            <div class="alert alert-danger mb-4">
+              Faltan datos requeridos o ha expirado el tiempo de recuperación de la contraseña.
+            </div>
           }
 
           <aw-non-field-errors [badRequest]="badRequest" />
