--- a/src/app/pages/company-holidays/employee-holidays-details/employee-holidays-details.component.html
+++ b/src/app/pages/company-holidays/employee-holidays-details/employee-holidays-details.component.html
@@ -1,7 +1,5 @@
 <aw-page-base>
-  @if (employee) {
-    <aw-page-header [breadcrumb]="breadcrumb">Detalles {{ employee.firstName }}</aw-page-header>
-  }
+  <aw-page-header [breadcrumb]="breadcrumb" />
 
   <mat-card>
     <mat-card-content> </mat-card-content>
