--- a/src/app/pages/departments/department-view/department-view.component.html
+++ b/src/app/pages/departments/department-view/department-view.component.html
@@ -1,6 +1,6 @@
 <aw-page-base>
   <!-- header -->
-  <aw-page-header [breadcrumb]="breadcrumb">Detalles departamento</aw-page-header>
+  <aw-page-header [breadcrumb]="breadcrumb" />
 
   <!-- department details -->
   <aw-department-details [departmentId]="departmentId"></aw-department-details>
