--- a/src/app/pages/employees/employee-view/employee-view.component.html
+++ b/src/app/pages/employees/employee-view/employee-view.component.html
@@ -1,6 +1,6 @@
 <aw-page-base>
   <!-- header -->
-  <aw-page-header [breadcrumb]="breadcrumb">Detalles de empleado</aw-page-header>
+  <aw-page-header [breadcrumb]="breadcrumb" />
 
   @if (employeeSelected()) {
     <aw-employee-details />
