--- a/src/app/pages/time-control-records/time-control-record-create/time-control-record-create.component.html
+++ b/src/app/pages/time-control-records/time-control-record-create/time-control-record-create.component.html
@@ -1,5 +1,5 @@
 <aw-page-base>
-  <aw-page-header [breadcrumb]="breadcrumb">Añadir tiempo</aw-page-header>
+  <aw-page-header [breadcrumb]="breadcrumb" />
 
   <!-- seleccionar empleado -->
   <mat-card>
