--- a/src/app/pages/time-control-records/time-control-record-details/time-control-record-details.component.html
+++ b/src/app/pages/time-control-records/time-control-record-details/time-control-record-details.component.html
@@ -1,5 +1,5 @@
 <aw-page-base>
-  <aw-page-header [breadcrumb]="breadcrumb">Detalles de tiempo</aw-page-header>
+  <aw-page-header [breadcrumb]="breadcrumb" />
 
   @if (timeControl?.incidence) {
     <mat-card>
