--- a/src/app/pages/category-absences/category-absence-update/category-absence-update.component.html
+++ b/src/app/pages/category-absences/category-absence-update/category-absence-update.component.html
@@ -1,5 +1,5 @@
 <aw-page-base>
-  <aw-page-header [breadcrumb]="breadcrumb">Editar ausencia</aw-page-header>
+  <aw-page-header [breadcrumb]="breadcrumb" />
 
   <mat-card>
     <mat-card-content>
