--- a/src/app/pages/company-calendar/company-calendars-view/company-calendar-list/company-calendar-list.component.html
+++ b/src/app/pages/company-calendar/company-calendars-view/company-calendar-list/company-calendar-list.component.html
@@ -1,5 +1,5 @@
 <aw-page-base>
-  <aw-page-header [breadcrumb]="breadcrumb">Lista de calendarios</aw-page-header>
+  <aw-page-header [breadcrumb]="breadcrumb" />
 
   <mat-card>
     <mat-card-content>
