--- a/src/app/pages/company-settings/company-settings-update/company-settings-update.component.html
+++ b/src/app/pages/company-settings/company-settings-update/company-settings-update.component.html
@@ -1,5 +1,5 @@
 <aw-page-base>
-  <aw-page-header [breadcrumb]="breadcrumb">Editar Configuración</aw-page-header>
+  <aw-page-header [breadcrumb]="breadcrumb" />
 
   <mat-card>
     <mat-card-content>
