--- a/src/app/pages/company-tasks/company-task-list/company-task-list.component.html
+++ b/src/app/pages/company-tasks/company-task-list/company-task-list.component.html
@@ -1,5 +1,5 @@
 <aw-page-base>
-  <aw-page-header [breadcrumb]="breadcrumb">Lista de tarea</aw-page-header>
+  <aw-page-header [breadcrumb]="breadcrumb" />
 
   <mat-card>
     <mat-card-content>
