--- a/src/app/pages/company-tasks/company-task-view/company-task-view.component.html
+++ b/src/app/pages/company-tasks/company-task-view/company-task-view.component.html
@@ -1,5 +1,5 @@
 <aw-page-base>
-  <aw-page-header [breadcrumb]="breadcrumb">Detalles tarea</aw-page-header>
+  <aw-page-header [breadcrumb]="breadcrumb" />
 
   <!-- task details -->
   <aw-company-task-details [companyTaskId]="companyTaskId" />
