--- a/src/app/pages/departments/department-update/department-update.component.html
+++ b/src/app/pages/departments/department-update/department-update.component.html
@@ -1,5 +1,5 @@
 <aw-page-base>
-  <aw-page-header [breadcrumb]="breadcrumb">Editar departamento</aw-page-header>
+  <aw-page-header [breadcrumb]="breadcrumb" />
 
   <mat-card>
     <mat-card-content>
