--- a/src/app/pages/employees/employee-update/employee-update.component.html
+++ b/src/app/pages/employees/employee-update/employee-update.component.html
@@ -1,5 +1,5 @@
 <aw-page-base>
-  <aw-page-header [breadcrumb]="breadcrumb">Editar datos de empleado</aw-page-header>
+  <aw-page-header [breadcrumb]="breadcrumb" />
 
   <mat-card>
     <mat-card-content>
